--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,13 +1,12 @@
-@import 'reset';
-@import 'variables/global';
-@import 'themes/normal';
-@import 'themes/dark';
+@import "reset";
+@import "variables/global";
+@import "themes/normal";
+@import "themes/dark";
 
 .app {
     font: var(--font-m);
     color: var(--primary-color);
     background-color: var(--bg-color);
-
     min-height: 100vh;
 }
 
