--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
-  --bg-color: #0e0e75;
-  --inverted-bg-color: #CCC8C8;
-
-  --primary-color: #049604;
-  --secondary-color: #04FF04;
-  --inverted-primary-color: #042696EF;
-  --inverted-secondary-color: #0032ff;
+    --bg-color: #0e0e75;
+    --inverted-bg-color: #ccc8c8;
+    --primary-color: #049604;
+    --secondary-color: #04ff04;
+    --inverted-primary-color: #042696ef;
+    --inverted-secondary-color: #0032ff;
 }
