--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,6 +7,7 @@
     font: var(--font-m);
     color: var(--primary-color);
     background-color: var(--bg-color);
+    width: 100vw;
     min-height: 100vh;
 }
 
