--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .Button {
+    padding: 6px 15px;
     cursor: pointer;
     color: var(--primary-color);
 }
@@ -11,8 +12,53 @@
 }
 
 .outline {
-    padding: 10px 15px;
     background: none;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
+}
+
+.background {
+    color: var(--primary-color);
+    background-color: var(--bg-color);
+    border: none;
+}
+
+.backgroundInverted {
+    color: var(--inverted-primary-color);
+    background-color: var(--inverted-bg-color);
+    border: none;
+}
+
+.square {
+    padding: 0;
+}
+
+.square.size_m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+    font-size: var(--font-size-m);
+}
+
+.square.size_l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+    font-size: var(--font-size-l);
+}
+
+.square.size_xl {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+    font-size: var(--font-size-xl);
+}
+
+.size_m {
+    font-size: var(--font-size-m);
+}
+
+.size_l {
+    font-size: var(--font-size-l);
+}
+
+.size_xl {
+    font-size: var(--font-size-xl);
 }
