--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,12 +3,15 @@
 @import "themes/normal";
 @import "themes/dark";
 
-.app {
+body {
     font: var(--font-m);
     color: var(--primary-color);
-    background-color: var(--bg-color);
+}
+
+.app {
     width: 100vw;
     min-height: 100vh;
+    background-color: var(--bg-color);
 }
 
 .content-page {
