--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -18,3 +18,7 @@
     color: var(--inverted-primary-color);
     background-color: var(--inverted-bg-color);
 }
+
+.readonly {
+    opacity: 0.7;
+}
