--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -21,8 +21,8 @@ body {
 
 .page-wrapper {
     flex-grow: 1;
+    flex-shrink: 100;
     height: calc(100vh - var(--navbar-height));
     overflow-y: auto;
     padding: 20px 20px 20px 45px;
-    width: 100%;
 }
