--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,12 +1,12 @@
 .Modal {
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    inset: 0;
     opacity: 0;
     pointer-events: none;
     z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: var(--primary-color);
 }
 
